<resources>
    <string name="app_name">Salon</string>
    <string name="sign_up_name">Create new account</string>
    <string name="sign_in_name">Login to Salon</string>
    <string name="type_here">Type here</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up_text">No account yet? Create one</string>
    <string name="or">OR</string>
    <string name="password_length_error">Your password should be at least 6 characters long!</string>
    <string name="email_error">Your email is invalid</string>
    <string name="sign_up_error">Sign up error has occurred</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>

    <string name="new_visit_title">Create new visit to send to your administrator</string>
    <string name="client_name">Client name</string>
    <string name="service_caption">Select service</string>
    <string name="products_caption">Add products</string>
    <string name="send_visit_caption">Send</string>
</resources>
