<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Login">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/etEmailAddress"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#000"
        android:textColorHint="#000"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/etEmailAddress" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUpLink"
        app:layout_constraintDimensionRatio="w,6:1"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvSignUpLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tvDivider"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/tvDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/btnSignInGoogle"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpLink" />

    <Button
        android:id="@+id/btnSignInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_google_button"
        android:drawableStart="@drawable/ic_google"
        android:layout_marginEnd="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSignInFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvDivider" />

    <Button
        android:id="@+id/btnSignInFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_facebook_button"
        android:drawableStart="@drawable/ic_facebook"
        android:layout_marginStart="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_in_facebook"
        android:textAllCaps="false"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSignInGoogle"
        app:layout_constraintTop_toBottomOf="@+id/tvDivider" />

</android.support.constraint.ConstraintLayout>