<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NewVisitActivity">
    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/caption"
        android:layout_marginTop="20dp"
        android:text="@string/new_visit_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etClientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/client_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryFont"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/caption" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/serviceCaption"
        android:layout_marginTop="10dp"
        android:text="@string/service_caption"
        android:textSize="8pt"
        android:textColor="@color/colorPrimaryFont"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/spinServicesList"
        app:layout_constraintTop_toBottomOf="@id/etClientName"/>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinServicesList"
        android:layout_marginTop="6dp"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/serviceCaption"
        app:layout_constraintTop_toBottomOf="@id/etClientName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/productsCaption"
        android:layout_marginTop="25dp"
        android:text="@string/products_caption"
        android:textSize="8pt"
        android:textColor="@color/colorPrimaryFont"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/spinServicesList"/>

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/btnAddProductListItem"
        android:src="@drawable/ic_add_circle"
        android:background="@color/colorWhite"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/productsCaption"
        app:layout_constraintTop_toTopOf="@id/productsCaption"
        app:layout_constraintBottom_toBottomOf="@id/productsCaption"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvProductList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/productsCaption"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorWhite"
        android:text="@string/send_visit_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvProductList" />

</android.support.constraint.ConstraintLayout>